syntax="proto3";

option go_package = "./proto";

package greet_service;

service GreetService {
    rpc Hello(NoParam) returns (HelloResponse) {}

    rpc HelloServerStream(NamesList) returns (stream HelloResponse) {}

    rpc HellowClientStream(stream HelloRequest) returns (MessagesList) {}

    rpc HelloBiDirectionalStream(stream NamesList) returns (stream HelloResponse) {}
}

message NoParam {};

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message NamesList {
    repeated string names = 1;
}

message MessagesList {
    repeated string messages = 1;
}
